# oss-cpp-sdk

./: CMakeLists.txt  Doxyfile_OSSCPP  README.txt  mainpage.h
doc/html/: annotated.html  annotated.js  classes.html  files.html  files.js  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x73.html  functions_0x75.html  functions_dup.js  functions_func.html  functions_func.js  functions_func_0x62.html  functions_func_0x63.html  functions_func_0x64.html  functions_func_0x65.html  functions_func_0x66.html  functions_func_0x67.html  functions_func_0x68.html  functions_func_0x69.html  functions_func_0x6b.html  functions_func_0x6c.html  functions_func_0x6d.html  functions_func_0x6e.html  functions_func_0x6f.html  functions_func_0x70.html  (+19 more)
doc/html/d0/d2e/: classosscpp_1_1_util.html  classosscpp_1_1_util.js
doc/html/d0/d39/: _o_s_s_c_p_p__i_n_t_e_r_n_a_l.html
doc/html/d0/d55/: oss__object__summary_8h.html  oss__object__summary_8h_source.html
doc/html/d0/d6d/: classosscpp_1_1_part_listing.html  classosscpp_1_1_part_listing.js
doc/html/d0/d70/: oss__part__listing_8h.html  oss__part__listing_8h.js  oss__part__listing_8h_source.html
doc/html/d0/d74/: classosscpp_1_1_object_listing-members.html
doc/html/d0/d82/: group___complete_multipart_upload_result.html
doc/html/d0/d95/: classosscpp_1_1_copy_object_request-members.html
doc/html/d0/d9c/: oss__object__metadata_8h.html  oss__object__metadata_8h_source.html
doc/html/d0/da9/: classosscpp_1_1_complete_multipart_upload_result.html  classosscpp_1_1_complete_multipart_upload_result.js
doc/html/d0/db5/: classosscpp_1_1_multipart_upload.html  classosscpp_1_1_multipart_upload.js
doc/html/d0/ddb/: oss__constants_8h.html  oss__constants_8h.js  oss__constants_8h_source.html
doc/html/d0/de0/: classosscpp_1_1_bucket.html  classosscpp_1_1_bucket.js
doc/html/d0/dee/: classosscpp_1_1_complete_multipart_upload_request-members.html
doc/html/d0/df8/: oss__client_8h.html  oss__client_8h.js  oss__client_8h_source.html
doc/html/d1/d1d/: oss__copy__object__result_8h.html  oss__copy__object__result_8h_source.html
doc/html/d1/d50/: classosscpp_1_1_upload_part_result.html  classosscpp_1_1_upload_part_result.js
doc/html/d1/d7a/: classosscpp_1_1_access_control_list-members.html
doc/html/d1/d7d/: oss__object__listing_8h.html  oss__object__listing_8h.js  oss__object__listing_8h_source.html
doc/html/d1/db6/: classosscpp_1_1_initiate_multipart_upload_request-members.html
doc/html/d1/ddf/: group___list_objects_request.html
doc/html/d1/de1/: group___delete_multiple_object_request.html
doc/html/d1/de7/: group___object_listing.html
doc/html/d1/def/: namespaceosscpp.html  namespaceosscpp.js
doc/html/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_67.js  classes_69.js  classes_6c.js  classes_6d.js  classes_6f.js  classes_70.js  classes_75.js  defines_5f.js  defines_64.js  defines_6d.js  defines_6e.js  defines_6f.js  defines_72.js  defines_76.js  enums_5f.js  enumvalues_61.js  enumvalues_62.js  (+42 more)
example/: CMakeLists.txt
example/bucket/: CMakeLists.txt  create_bucket.cc  delete_bucket.cc  get_bucket_acl.cc  is_bucket_exist.cc  list_buckets.cc  list_objects_with_bucket_name.cc  list_objects_with_prefix.cc  list_objects_with_request.cc  set_bucket_acl.cc
example/miscs/: CMakeLists.txt  generate_presigned_url_with_expiration.cc  generate_presigned_url_with_method.cc
example/multipart-upload/: CMakeLists.txt  abort_multipart_upload.cc  complete_multipart_upload.cc  initiate_multipart_upload.cc  list_multipart_upload.cc  list_parts.cc  upload_part.cc
example/object/: CMakeLists.txt  copy_object.cc  copy_object_ext.cc  delete_multiple_object.cc  delete_object.cc  get_object_metadata.cc  get_object_to_buffer.cc  get_object_to_file.cc  put_object_from_buffer.cc  put_object_from_file.cc
example/object-group/: CMakeLists.txt  delete_object_group.cc  get_object_group_index.cc  get_object_group_to_buffer.cc  get_object_group_to_file.cc  head_object_group.cc  post_object_group.cc
include/osscpp/: client.h  oss_constants.h
include/osscpp/modules/: oss_abort_multipart_upload_request.h  oss_access_control_list.h  oss_bucket.h  oss_client.h  oss_complete_multipart_upload_request.h  oss_complete_multipart_upload_result.h  oss_copy_object_request.h  oss_copy_object_result.h  oss_delete_multiple_object_request.h  oss_generate_presigned_url_request.h  oss_get_object_group_index_result.h  oss_get_object_group_request.h  oss_get_object_request.h  oss_initiate_multipart_upload_request.h  oss_initiate_multipart_upload_result.h  oss_list_multipart_uploads_request.h  oss_list_objects_request.h  oss_list_parts_request.h  oss_multipart_object_group.h  oss_multipart_upload.h  oss_multipart_upload_listing.h  oss_object.h  oss_object_group_item.h  oss_object_listing.h  oss_object_metadata.h  oss_object_summary.h  oss_owner.h  oss_part_etag.h  oss_part_listing.h  oss_part_summary.h  oss_post_object_group_request.h  oss_post_object_group_result.h  oss_put_object_result.h  oss_response_header_overrides.h  oss_upload_part_request.h  oss_upload_part_result.h
include/osscpp/util/: oss_util.h
src/: CMakeLists.txt
src/lib/: hmac.h  oss_ttxml.c  oss_ttxml.h
src/modules/: oss_bucket_operation.cc  oss_bucket_operation.h  oss_callback.cc  oss_callback.h  oss_client.cc  oss_multipart_upload_operation.cc  oss_multipart_upload_operation.h  oss_object_group_operation.cc  oss_object_group_operation.h  oss_object_operation.cc  oss_object_operation.h  oss_request_param.cc  oss_request_param.h
src/util/: oss_util.cc
(+189 files in other folders)
