INCLUDE_DIRECTORIES(
	${OSSCPP_BINARY_DIR}
	${OSSCPP_SOURCE_DIR}/
	${OSSCPP_SOURCE_DIR}/src
	${OSSCPP_SOURCE_DIR}/include/
	${OSSCPP_SOURCE_DIR}/include/osscpp/
	)
AUX_SOURCE_DIRECTORY(util UTILS)
AUX_SOURCE_DIRECTORY(modules MODULES)
AUX_SOURCE_DIRECTORY(lib LIBS)

SET(CORE_SRC
	${UTILS}
	${MODULES}
	${LIBS}
	)


ADD_LIBRARY(osscppcore_static STATIC ${CORE_SRC})
ADD_LIBRARY(osscppcore_shared SHARED ${CORE_SRC})
SET_TARGET_PROPERTIES(osscppcore_static PROPERTIES OUTPUT_NAME "osscppcore") 
SET_TARGET_PROPERTIES(osscppcore_shared PROPERTIES OUTPUT_NAME "osscppcore") 
SET_TARGET_PROPERTIES(osscppcore_shared PROPERTIES VERSION 0.1.0 SOVERSION 1) 

INSTALL(TARGETS
	osscppcore_static 
	osscppcore_shared
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib) 

INSTALL(DIRECTORY ${OSSCPP_SOURCE_DIR}/include/ DESTINATION include)
INSTALL(FILES ${OSSCPP_SOURCE_DIR}/AUTHORS DESTINATION share/doc/osscpp/)
INSTALL(FILES ${OSSCPP_SOURCE_DIR}/LGPL-2.1 DESTINATION share/doc/osscpp/)
INSTALL(FILES ${OSSCPP_SOURCE_DIR}/LICENSE.txt DESTINATION share/doc/osscpp/)
